--- a/src/main/resources/assets/unknownmagic/lang/en_us.json
+++ b/src/main/resources/assets/unknownmagic/lang/en_us.json
@@ -8,6 +8,16 @@
   "block.unknownmagic.deepslate_ether_ore": "Deepslate Ether Ore",
   "block.unknownmagic.whitestone_block": "Block of Whitestone",
 
+  "block.unknownmagic.whitestone_stairs": "Whitestone Stairs",
+  "block.unknownmagic.whitestone_slab": "Whitestone Slab",
+  "block.unknownmagic.whitestone_button": "Whitestone Button",
+  "block.unknownmagic.whitestone_pressure_plate": "Whitestone Pressure Plate",
+  "block.unknownmagic.whitestone_fence": "Whitestone Fence",
+  "block.unknownmagic.whitestone_fence_gate": "Whitestone Fence Gate",
+  "block.unknownmagic.whitestone_wall": "Whitestone Wall",
+  "block.unknownmagic.whitestone_door": "Whitestone Door",
+  "block.unknownmagic.whitestone_trapdoor": "Whitestone Trapdoor",
+
   "creativetab.unknownmagic_tab": "Unknown Magic",
 
 
