--- a/src/main/resources/assets/unknownmagic/lang/en_us.json
+++ b/src/main/resources/assets/unknownmagic/lang/en_us.json
@@ -2,10 +2,10 @@
   "item.unknownmagic.whitestone": "Whitestone",
   "item.unknownmagic.raw_ether": "Raw Ether",
   "item.unknownmagic.ether": "Ether",
-  "item.unknownmagic.varoot_stone": "Varoot Stone",
 
   "block.unknownmagic.ether_ore": "Ether Ore",
   "block.unknownmagic.deepslate_ether_ore": "Deepslate Ether Ore",
+  "block.unknownmagic.varoot_stone": "Varoot Stone",
   "block.unknownmagic.whitestone_block": "Block of Whitestone",
 
   "block.unknownmagic.whitestone_stairs": "Whitestone Stairs",
